--- a/ECommerceCore/ECommerceCore.csproj
+++ b/ECommerceCore/ECommerceCore.csproj
@@ -19,13 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Controllers\" />
-    <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\Admin\Views\" />
-    <Folder Include="Areas\Customer\Controllers\" />
-    <Folder Include="Areas\Customer\Data\" />
-    <Folder Include="Areas\Customer\Models\" />
-    <Folder Include="Areas\Customer\Views\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
